added reghuver docker repo for openedx

--- a/tutor/templates/config.yml
+++ b/tutor/templates/config.yml
@@ -29,7 +29,8 @@ ANDROID_RELEASE_KEY_PASSWORD: "android release key password"
 ANDROID_RELEASE_KEY_ALIAS: "android release key alias"
 DEV_PROJECT_NAME: "tutor_dev"
 DOCKER_REGISTRY: "docker.io/"
-DOCKER_IMAGE_OPENEDX: "{{ DOCKER_REGISTRY }}overhangio/openedx:{{ TUTOR_VERSION }}"
+#DOCKER_IMAGE_OPENEDX: "{{ DOCKER_REGISTRY }}overhangio/openedx:{{ TUTOR_VERSION }}"
+DOCKER_IMAGE_OPENEDX: "{{ DOCKER_REGISTRY }}raghuver/edx_tutor_openedx:0.3"
 DOCKER_IMAGE_OPENEDX_DEV: "{{ DOCKER_REGISTRY }}overhangio/openedx-dev:{{ TUTOR_VERSION }}"
 DOCKER_IMAGE_ANDROID: "{{ DOCKER_REGISTRY }}overhangio/openedx-android:{{ TUTOR_VERSION }}"
 DOCKER_IMAGE_CADDY: "{{ DOCKER_REGISTRY }}caddy:2.2.1"
@@ -67,7 +68,7 @@ MYSQL_HOST: "mysql"
 MYSQL_PORT: 3306
 MYSQL_ROOT_USERNAME: "root"
 NGINX_HTTP_PORT: 80
-PLATFORM_NAME: "My Open edX"
+PLATFORM_NAME: "Raga Open edX"
 PLUGINS: []
 REDIS_HOST: "redis"
 REDIS_PORT: 6379
