--- a/tutor/templates/local/docker-compose.yml
+++ b/tutor/templates/local/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     image: {{ DOCKER_IMAGE_MYSQL }}
     command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
     restart: unless-stopped
+    ports:
+      - "3306:3306"    
     volumes:
       - ../../data/mysql:/var/lib/mysql
     environment:
